# systemd-networkd-vpnc

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: csd-wrapper.sh  start-cisco-vpn.sh
src/: main.rs
units/: cisco-vpn.netdev  cisco-vpn.network  cisco-vpn.service
